@@ -32,6 +32,10 @@ if HAS_WRITE_STRINGS_WARNING
 CFLAGS += -Wno-write-strings
 endif
 
+if HAS_ERROR_FORMAT_SECURITY
+CFLAGS += -Wformat -Werror=format-security
+endif
+
 if COMPILER_IS_CLANG
 CFLAGS   += -Wno-format-extra-args       # perf/tinycc.c
 CFLAGS   += -Wno-literal-range           # none/tests/amd64/fxtract.c
